--- a/index.html
+++ b/index.html
@@ -1,3 +1,29 @@
-<p>Hello 大家好，我是魏以照</p>
-<p>我是，这是我的个人网站。 </p>
-<p>很高兴你来到这里, 你可以在以下的网站找到我</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>圣坤桑的日语单词学习</title>
+    </head>
+    <body>
+      <h1>名词</h1>
+          <img src="https://raw.githubusercontent.com/freesouru/nippon_notebook_img/main/img/elementary_L1_noun_1.jpg" alt="pic missing">
+          <img src="https://raw.githubusercontent.com/freesouru/nippon_notebook_img/main/img/elementary_L1_noun_2.jpg" alt="pic missing">
+          <img src="https://raw.githubusercontent.com/freesouru/nippon_notebook_img/main/img/elementary_L2_noun_1.jpg" alt="pic missing">
+          <img src="https://raw.githubusercontent.com/freesouru/nippon_notebook_img/main/img/elementary_L2_noun_2.jpg" alt="pic missing">
+      <br>
+      <br>
+      <h1>专有名词</h1>
+          <img src="https://raw.githubusercontent.com/freesouru/nippon_notebook_img/main/img/elementary_L1_propernoun_1.jpg" alt="pic missing">
+          <img src="https://raw.githubusercontent.com/freesouru/nippon_notebook_img/main/img/elementary_L2_propernoun_1.jpg" alt="pic missing">
+      <br>
+      <br>
+      <h1>副词</h1>
+          <img src="https://raw.githubusercontent.com/freesouru/nippon_notebook_img/main/img/elementary_L1_adv_1.jpg" alt="pic missing">
+      <br>
+      <br>
+      <h1>日常用语</h1>
+          <img src="https://raw.githubusercontent.com/freesouru/nippon_notebook_img/main/img/elementary_L1_idiom_1.jpg" alt="pic missing">
+          <img src="https://raw.githubusercontent.com/freesouru/nippon_notebook_img/main/img/elementary_L2_idiom_1.jpg" alt="pic missing">
+      <br>
+      <br>
+    </body>
+</html>
