--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
           <img src="https://raw.githubusercontent.com/freesouru/nippon_notebook_img/main/img/elementary_L2_idiom_1.jpg" alt="pic missing">
       <br>
       <br>
+        <img src="https://raw.githubusercontent.com/freesouru/nippon_notebook_img/main/img/elementary_L1_adv_1.jpg"/>
     </body>
 </html>
