--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
           <img src="https://raw.githubusercontent.com/freesouru/notebook/main/nippon_img/elementary_L1_noun_2.jpg" alt="pic missing">
           <img src="https://raw.githubusercontent.com/freesouru/notebook/main/nippon_img/elementary_L2_noun_1.jpg" alt="pic missing">
           <img src="https://raw.githubusercontent.com/freesouru/notebook/main/nippon_img/elementary_L2_noun_2.jpg" alt="pic missing">
+          <img src="https://raw.githubusercontent.com/freesouru/notebook/main/nippon_img/elementary_L3_noun_1.jpg"/>
+          <img src="https://raw.githubusercontent.com/freesouru/notebook/main/nippon_img/elementary_L3_noun_2.jpg"/>
       <br>
       <br>
       <h1>专有名词</h1>
           <img src="https://raw.githubusercontent.com/freesouru/notebook/main/nippon_img/elementary_L1_propernoun_1.jpg" alt="pic missing">
           <img src="https://raw.githubusercontent.com/freesouru/notebook/main/nippon_img/elementary_L2_propernoun_1.jpg" alt="pic missing">
+          <img src="https://raw.githubusercontent.com/freesouru/notebook/main/nippon_img/elementary_L3_propernoun_1.jpg"/>
       <br>
       <br>
       <h1>副词</h1>
@@ -23,6 +26,7 @@
       <h1>日常用语</h1>
           <img src="https://raw.githubusercontent.com/freesouru/notebook/main/nippon_img/elementary_L1_idiom_1.jpg" alt="pic missing">
           <img src="https://raw.githubusercontent.com/freesouru/notebook/main/nippon_img/elementary_L2_idiom_1.jpg" alt="pic missing">
+          <img src="https://raw.githubusercontent.com/freesouru/notebook/main/nippon_img/elementary_L3_idiom_1.jpg"/>
       <br>
       <br>
     </body>
