--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>圣坤桑的日语单词学习</title>
+        <title>圣坤桑的日本語</title>
     </head>
     <body>
       <h1>名词</h1>
