--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L5/elementary_L5_noun_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L5/elementary_L5_noun_2.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L5/elementary_L5_noun_3.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L6/elementary_L6_noun_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L6/elementary_L6_noun_2.jpg" alt="pic missing">
       <br>
       <br>
       <h1>动词</h1>
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L4/elementary_L4_verb_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L5/elementary_L5_verb_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L6/elementary_L6_verb_1.jpg" alt="pic missing">
       <br>
       <br>  
       <h1>专有名词</h1>
@@ -29,11 +32,13 @@
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L2/elementary_L2_propernoun_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L3/elementary_L3_propernoun_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L4/elementary_L4_propernoun_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L6/elementary_L6_propernoun_1.jpg" alt="pic missing">
       <br>
       <br>
       <h1>副词</h1>
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L1/elementary_L1_adv_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L5/elementary_L5_adv_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L6/elementary_L6_adv_1.jpg" alt="pic missing">
       <br>
       <br>
       <h1>日常用语</h1>
@@ -41,6 +46,7 @@
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L2/elementary_L2_idiom_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L3/elementary_L3_idiom_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L5/elementary_L5_idiom_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L6/elementary_L6_idiom_1.jpg" alt="pic missing">
       <br>
       <br>
     </body>
