--- a/index.html
+++ b/index.html
@@ -19,12 +19,18 @@
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L5/elementary_L5_noun_3.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L6/elementary_L6_noun_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L6/elementary_L6_noun_2.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L7/elementary_L7_noun_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L7/elementary_L7_noun_2.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L8/elementary_L8_noun_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L8/elementary_L8_noun_2.jpg" alt="pic missing">
       <br>
       <br>
       <h1>动词</h1>
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L4/elementary_L4_verb_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L5/elementary_L5_verb_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L6/elementary_L6_verb_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L7/elementary_L7_verb_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L8/elementary_L8_verb_1.jpg" alt="pic missing">
       <br>
       <br>  
       <h1>专有名词</h1>
@@ -39,6 +45,8 @@
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L1/elementary_L1_adv_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L5/elementary_L5_adv_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L6/elementary_L6_adv_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L7/elementary_L7_adv_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L8/elementary_L8_adv_1.jpg" alt="pic missing">
       <br>
       <br>
       <h1>日常用语</h1>
@@ -47,6 +55,30 @@
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L3/elementary_L3_idiom_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L5/elementary_L5_idiom_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L6/elementary_L6_idiom_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L7/elementary_L7_idiom_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L8/elementary_L8_idiom_1.jpg" alt="pic missing">
+      <br>
+      <br>
+      <h1>例句</h1>
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L1/elementary_L1_sentence_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L2/elementary_L2_sentence_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L3/elementary_L3_sentence_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L4/elementary_L4_sentence_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L5/elementary_L5_sentence_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L6/elementary_L6_sentence_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L7/elementary_L7_sentence_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L8/elementary_L8_sentence_1.jpg" alt="pic missing">
+      <br>
+      <br>
+      <h1>课文</h1>
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L1/elementary_L1_dialog_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L2/elementary_L2_dialog_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L3/elementary_L3_dialog_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L4/elementary_L4_dialog_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L5/elementary_L5_dialog_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L6/elementary_L6_dialog_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L7/elementary_L7_dialog_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L8/elementary_L8_dialog_1.jpg" alt="pic missing">
       <br>
       <br>
     </body>
