--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L6/elementary_L6_sentence_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L7/elementary_L7_sentence_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L8/elementary_L8_sentence_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L9/elementary_L9_sentence_1.jpg" alt="pic missing">
       <br>
       <br>
       <h1>课文</h1>
@@ -89,6 +90,7 @@
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L6/elementary_L6_dialog_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L7/elementary_L7_dialog_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L8/elementary_L8_dialog_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L9/elementary_L9_dialog_1.jpg" alt="pic missing">
       <br>
       <br>
     </body>
