--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L8/elementary_L8_noun_2.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L9/elementary_L9_noun_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L9/elementary_L9_noun_2.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L10/elementary_L10_noun_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L10/elementary_L10_noun_2.jpg" alt="pic missing">
       <br>
       <br>
       <h1>动词</h1>
@@ -42,6 +44,7 @@
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L4/elementary_L4_propernoun_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L6/elementary_L6_propernoun_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L9/elementary_L9_propernoun_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L10/elementary_L10_propernoun_1.jpg" alt="pic missing">
       <br>
       <br>
       <h1>副词</h1>
@@ -51,6 +54,7 @@
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L7/elementary_L7_adv_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L8/elementary_L8_adv_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L9/elementary_L9_adv_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L10/elementary_L10_adv_1.jpg" alt="pic missing">
       <br>
       <br>
       <h1>日常用语</h1>
@@ -62,11 +66,13 @@
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L7/elementary_L7_idiom_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L8/elementary_L8_idiom_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L9/elementary_L9_idiom_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L10/elementary_L10_idiom_1.jpg" alt="pic missing">
       <br>
       <br>
       <h1>形容词</h1>
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L9/elementary_L9_adj_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L9/elementary_L9_adj_2.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L10/elementary_L10_adj_1.jpg" alt="pic missing">
       <br>
       <br>
       <h1>例句</h1>
