--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L7/elementary_L7_sentence_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L8/elementary_L8_sentence_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L9/elementary_L9_sentence_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L10/elementary_L10_sentence_1.jpg" alt="pic missing">
       <br>
       <br>
       <h1>课文</h1>
@@ -97,6 +98,7 @@
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L7/elementary_L7_dialog_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L8/elementary_L8_dialog_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L9/elementary_L9_dialog_1.jpg" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L10/elementary_L10_dialog_1.jpg" alt="pic missing">
       <br>
       <br>
     </body>
