--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
         <title>圣坤桑的日本語</title>
     </head>
     <body>
+      <h1>数字</h1>
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L0/numbers_1.png" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L0/numbers_2.png" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L0/calendar.png" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L0/month.png" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L0/time.png" alt="pic missing">
+          <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L0/week.png" alt="pic missing">
+      <br>
+      <br>  
       <h1>名词</h1>
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L1/elementary_L1_noun_1.jpg" alt="pic missing">
           <img src="http://noted.oss-cn-beijing.aliyuncs.com/nippon_img/L1/elementary_L1_noun_2.jpg" alt="pic missing">
